# biodivine-bn-classifier

./: .gitignore  README.md  requirements.txt
.github/workflows/: build_release.yml  test_build.yml
benchmark-models/test-mapk/results/: bdd_dump_001.txt  bdd_dump_011.txt  report.txt
benchmarks/: README.md  classification.py  model-checking-p1.py  model-checking-p3.py  model-checking-p4.py  model-checking.py  plain-text-formulae.txt  run-benchmarks-all-parallel.sh  run-benchmarks-all.sh  run-benchmarks-subset.sh
benchmarks/case-study-mapk/: classification-cli-output.txt  decision_tree.dot  mapk-annotated.aeon
benchmarks/helper-scripts/: add_annotations.py  gather-models.py  postprocess-classif.py  postprocess-mc.py
benchmarks/large_models/: README.md  mapk.aeon  properties-only.txt
benchmarks/large_models/EGFR-ERBB-signalling/: EGFR-ERBB-fixed.aeon
benchmarks/large_models/[Apoptosis-network]-[41v]-[84p]/: apoptosis-fixed.aeon  apoptosis-parametrized-annotated.aeon
benchmarks/large_models/[Butanol-production-signalling]-[66v]-[72p]/: butanol-fixed.aeon  butanol-parametrized-annotated.aeon
benchmarks/large_models/[EGFR-ERBB-signalling]-[104v]-[8p]/: EGFR-ERBB-parametrized-annotated.aeon
benchmarks/large_models/[FA-BRCA-pathway]-[28v]-[72p]/: fa-brca-fixed.aeon  fa-brca-parametrized-annotated.aeon
benchmarks/large_models/[MAPK]-[18v]-[50p]/: mapk-fixed.aeon  mapk-parametrized-annotated.aeon
benchmarks/large_models/butanol/: butanol-fixed.aeon  butanol-parametrized-annotated.aeon
benchmarks/mapk/: README.md  properties-only.txt
benchmarks/mapk2/: formulae-list.txt  sketch.aeon
benchmarks/models/fully-specified-models/: 001.aeon  002.aeon  004.aeon  005.aeon  006.aeon  008.aeon  009.aeon  010.aeon  011.aeon  012.aeon  013.aeon  014.aeon  016.aeon  017.aeon  018.aeon  019.aeon  020.aeon  022.aeon  023.aeon  025.aeon  027.aeon  030.aeon  031.aeon  032.aeon  035.aeon  037.aeon  038.aeon  039.aeon  041.aeon  042.aeon  043.aeon  044.aeon  046.aeon  048.aeon  050.aeon  051.aeon  052.aeon  054.aeon  056.aeon  057.aeon  (+139 more)
benchmarks/models/fully-specified-models-subset/: 003.aeon  007.aeon  015.aeon  021.aeon  024.aeon  026.aeon  028.aeon  029.aeon  033.aeon  034.aeon  036.aeon  040.aeon  045.aeon  047.aeon  049.aeon  053.aeon  055.aeon  058.aeon  062.aeon  063.aeon  064.aeon  067.aeon  069.aeon  074.aeon  077.aeon  084.aeon  090.aeon  091.aeon  097.aeon  099.aeon  102.aeon  106.aeon  108.aeon  110.aeon  115.aeon  133.aeon  139.aeon  149.aeon  164.aeon  165.aeon  (+11 more)
benchmarks/models/large-parametrized-models/: [Apoptosis-network]-[41v]-[100p].aeon  [BRAF-treatment-response]-[37v]-[60p].aeon  [Butanol-production-signalling]-[66v]-[72p].aeon  [FA-BRCA-pathway]-[28v]-[72p].aeon  [MAPK]-[18v]-[50p].aeon
benchmarks/results/classification/: 002_out.txt  003_out.txt  005_out.txt  006_out.txt  007_out.txt  008_out.txt  009_out.txt  010_out.txt  (+215 more)
benchmarks/tlgl/: README.md  model-with-properties.aeon  properties-only.txt
classifier/: Cargo.toml
classifier/src/: classification.rs  load_input.rs  load_inputs.rs  main.rs  write_output.rs
src-tauri/: Cargo.toml  model.aeon  tauri.conf.json
src-tauri/.github/workflows/: build_release.yml  test_build.yml
src-tauri/src/: main.rs  util.rs
src-tauri/src/bdt/: _attributes_for_network.rs  _impl_attribute.rs  _impl_bdt.rs  _impl_bdt_dot_export.rs  _impl_bdt_json.rs  _impl_bdt_node.rs  _impl_indexing.rs  mod.rs
tutorial/: quick-start.py  tutorial.ipynb
tutorial/.ipynb_checkpoints/: tutorial-checkpoint.ipynb
tutorial/case-study-mapk/: mapk-annotated.aeon
ui/: index.html  style.css
ui/script/: ComputeEngine.js  CytoscapeTreeEditor.js  treeExplorerMain.js
(+13110 files in other folders)
