[package]
name = "hctl-property-explorer"
version = "0.3.0"
description = "An interactive explorer of HCTL properties through decision trees."
authors = ["Ondřej Huvar<xhuvar@fi.muni.cz>", "Samuel Pastva <sam.pastva@gmail.com>"]
license = "MIT"
repository = "https://github.com/sybila/biodivine-hctl-explorer"
default-run = "hctl-property-explorer"
edition = "2021"
rust-version = "1.72"

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
biodivine-lib-bdd = "=0.6.2"
biodivine-lib-param-bn = "=0.7.2"

clap = { version = "4.1.4", features = ["derive"] }
json = "0.12.4"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.3", features = ["dialog-all"] }
zip = "7.3.0"

# Include Z3 dependencies as strictly as possible, we don't want
# this to change because it might break our release builds.
#z3="^0.11.2"
#z3-sys = "^0.7.1"

[features]

# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]

# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

# For releases, we want to include Z3 statically, so that users
# don't have to install it (or break compatibility with new versions).
# So for CI builds, this feature is enabled, but for local builds,
# you don't need it as long as you have Z3 installed (because your
# build may take >30min if you enable it).
#static-z3 = ["z3/static-link-z3"]
